--- a/src/components/NewsCard.css
+++ b/src/components/NewsCard.css
@@ -2,13 +2,12 @@
     display: flex;
     align-items: stretch;
     width: 100%;
-    max-width: 600px;
+    max-width: 900px;
     height : 100%;
     height : 300px;
     margin: 15px auto;
     background-color: white; 
-    color: black;
-    border: 1px solid #444; 
+    color: black; 
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -22,21 +21,22 @@
   }
   
   .news-card img {
-    width : 200px;
+    width : 350px;
     height: 100%;
+    border-radius: 10px;
     object-fit: cover; 
     border-right: 1px solid #444; 
   }
   
   .news-card h3 {
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 300;
     margin: 10px 0 5px;
     color: black;
   }
   
   .news-card p {
-    font-size: 14px;
+    font-size: 16px;
     margin: 0;
     color: #ccc; 
   }
@@ -45,6 +45,5 @@
     padding: 10px 15px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
   
